Fixing agenda horizontal overflow issue on mobile

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -364,7 +364,7 @@
                               }
 
                               h6 {
-                                margin: -10px 0 8px;
+                                margin: 0 0 8px;
                                 text-transform: capitalize;
                                 font-size: small;
                                 color: $light-disabled-text-color;
@@ -633,7 +633,6 @@
                           }
                           & > .agenda {
                             display: block;
-                            min-width: 885px;
                           }
 
                           & > .secondary.info {
